# ETL-02

./: README.md  mkdocs.yml  pyproject.toml
app/: funcao.py
docs/: index.md
